WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71424
REGRESSION (
r98759
-
r98773
): platform/mac/fonts/color-bitmap.html failing on Lion Intel Debug (Tests)
https://bugs.webkit.org/show_bug.cgi?id=71424
Summary
REGRESSION (r98759-r98773): platform/mac/fonts/color-bitmap.html failing on L...
Simon Fraser (smfr)
Reported
2011-11-02 17:30:48 PDT
platform/mac/fonts/color-bitmap.html started failing on Lion Intel Debug (Tests) between
r98760
and
r98773
(inclusive).
http://trac.webkit.org/log/trunk?rev=98773&stop_rev=98760&limit=15
http://build.webkit.org/results/Lion%20Intel%20Debug%20(Tests)/r98759%20(1144)/results.html
passed
http://build.webkit.org/results/Lion%20Intel%20Debug%20(Tests)/r98773%20(1145)/results.html
failed Probably broken by
http://trac.webkit.org/browser/trunk?rev=98765
.
Attachments
Remove the test, the font it was using, and code to register the font
(6.66 KB, patch)
2011-11-02 17:47 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-11-02 17:42:15 PDT
This test needs to be removed because the OS X feature on which it relies is no present in any supported platform.
mitz
Comment 2
2011-11-02 17:47:11 PDT
Created
attachment 113409
[details]
Remove the test, the font it was using, and code to register the font
mitz
Comment 3
2011-11-02 17:56:17 PDT
Committed
r99127
.
http://trac.webkit.org/r99127
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug