REGRESSION (r98759-r98773): platform/mac/fonts/color-bitmap.html failing on Lion Intel Debug (Tests) https://bugs.webkit.org/show_bug.cgi?id=71424

Reviewed by Sam Weinig.

Tools:

Removed the ColorBits font and the code to register it in the process
running the tests. The font was only used by the aforementioned test,
which is now being removed.

* DumpRenderTree/fonts/ColorBits-A.png: Removed.
* DumpRenderTree/fonts/ColorBits.ttf: Removed.
* DumpRenderTree/mac/DumpRenderTree.mm:
(allowedFontFamilySet):
(activateTestingFonts):
* WebKitTestRunner/InjectedBundle/gtk/ActivateFontsGtk.cpp:
(WTR::inititializeFontConfigSetting):
* WebKitTestRunner/InjectedBundle/mac/ActivateFonts.mm:
(WTR::allowedFontFamilySet):
(WTR::activateFonts):

LayoutTests:

Removed this test and its results, because it was relying on a feature
that is no longer present in any OS X version. The color bitmap font
rendering code is now covered by another test.

* platform/mac/fonts/color-bitmap-expected.png: Removed.
* platform/mac/fonts/color-bitmap-expected.txt: Removed.
* platform/mac/fonts/color-bitmap.html: Removed.



Canonical link: https://commits.webkit.org/87718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99127 268f45cc-cd09-0410-ab3c-d52691b4dbfc