Tools/DumpRenderTree/mac/DumpRenderTree.mm
@@ -253,7 +253,6 @@ static NSSet *allowedFontFamilySet()
         @"Chalkduster",
         @"Charcoal CY",
         @"Cochin",
-        @"ColorBits",
         @"Comic Sans MS",
         @"Copperplate",
         @"Corsiva Hebrew",
@@ -407,7 +406,6 @@ static void activateTestingFonts()
 
     static const char* fontFileNames[] = {
         "AHEM____.TTF",
-        "ColorBits.ttf",
         "WebKitWeightWatcher100.ttf",
         "WebKitWeightWatcher200.ttf",
         "WebKitWeightWatcher300.ttf",
